Add new test and update Selenium version